<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GowyWorld</string>
    <string name="hello_world">Welcome in the Gowy\'s World!</string>
    <string name="hello_activitya">You\'r in Activity A, bro !</string>
    <string name="hello_activityb">You\'r in Activity B, dude !</string>
    <string name="hello_sauvegarde">You\'r in Sauvegarde, Bro !</string>
    <string name="hello_sauvegarde1">You\'r in Sauvegarde -Preference-, Bro !</string>
    <string name="hello_sauvegarde2">You\'r in Sauvegarde -Externe-, Bro !</string>
    <string name="menu_settings">Settings</string>
    <string name="Appli_1">Activity POC</string>
    <string name="Appli_2">Sauvegarde POC</string>
    <string name="title_activity_activity">ActivityA</string>
    <string name="Appli_1_Button_1">Start Activity B</string>
    <string name="Appli_1_Button_2">Stop Activity A</string>
    <string name="Appli_1_Button_3">Clean Statut</string>
    <string name="Appli_2_Button_1">Start Activity A</string>
    <string name="Appli_2_Button_2">Stop Activity B</string>
    <string name="title_activity_activity_b">ActivityB</string>
    <string name="title_activity_sauvegarde">Sauvegarde</string>
    <string name="Button_sauvegarde1">Preference</string>
    <string name="Button_sauvegarde2">Externe</string>
    <string name="Button_sauvegarde3">SQL</string>
    <string name="Button_sauvegarde4">Autres</string>
    <string name="Button_sauvegarde5">Retour</string>    
    <string name="title_activity_sauvegarde1">Sauvegarde1</string>
    <string name="title_activity_sauvegarde2">Sauvegarde2</string>
    <string name="titre_pref_general">Préférence : Options</string>

</resources>