<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityA" >

    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/hello_activitya" />
    
    <LinearLayout
        android:id="@+id/layoutTest"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView1" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.33"
            android:onClick="startActivityB"
            android:text="@string/Appli_1_Button_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.33"
            android:onClick="stopActivityA"
            android:text="@string/Appli_1_Button_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.33"
            android:onClick="cleanActivity"
            android:text="@string/Appli_1_Button_3" />
    </LinearLayout>
  
       <ScrollView
           	   	android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
           	    android:layout_alignParentBottom="true"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentRight="true"
	            android:layout_below="@+id/layoutTest"
	            android:layout_marginTop="14dp"
           >
      		<TextView
	            android:id="@+id/editTextA"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
             />
 		</ScrollView>

    
</RelativeLayout>